# termdat-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  Dockerfile  PUBLISHING.md  README.de.md  README.md  SECURITY.de.md  SECURITY.md  pyproject.toml  server.json
.github/: dependabot.yml
.github/workflows/: ci.yml  live.yml  publish.yml
audits/2026-07-20T135154-Z-termdat-mcp/: audit-meta.json  audit-report.md  profile.json  summary.json  verification-results.json
audits/2026-07-20T135154-Z-termdat-mcp/findings/: ARCH-002-tool-description-length.md  ARCH-004-ioc-settings-object.md  ARCH-007-parallelise-check-terms.md  ARCH-008-primitives-tools-only.md  ARCH-011-tools-package-split.md  ARCH-012-protocol-version-pinning.md  OBS-001-error-separation-tests.md  OBS-002-mask-error-details.md  OBS-003-structured-logging.md  OPS-001-test-coverage-per-tool.md  OPS-002-contributing-md.md  SCALE-002-stateful-lb.md  SDK-001-lifespan-client-cleanup.md  SDK-003-context-injection.md  SDK-004-cors-session-id.md  SEC-005-dns-pinning.md  SEC-007-container-sandboxing.md  SEC-018-input-constraints.md  SEC-021-egress-allow-list.md
audits/2026-07-20T183352-Z-termdat-mcp/: audit-meta.json  audit-report.md  summary.json  verification-results.json
docs/: network-egress.md
docs/adr/: 0001-dns-pinning.md  0002-scaling-and-deployment.md
src/termdat_mcp/: __init__.py  __main__.py  client.py  logging_config.py  models.py  server.py  settings.py
tests/: test_client.py  test_live.py  test_server.py
